# Nexus-Worker-MCP

./: .env.example  .gitignore  README.md  pyproject.toml  test_azure.py
.github/workflows/: ci.yml
docs/: architecture.md  contributing.md  design-patterns.md  error-handling.md  finops.md  prompt-templates.md  provider-adapters.md  scenarios.md  setup.md  tools-reference.md
src/nexus_worker/: __init__.py  __main__.py  config.py  server.py
src/nexus_worker/core/: __init__.py  cache.py  errors.py  logger.py  metrics.py
src/nexus_worker/prompts/: __init__.py  engine.py
src/nexus_worker/prompts/templates/: analyze.md  document.md  explain.md  generate.md  refactor.md  review.md  test.md
src/nexus_worker/providers/: __init__.py  anthropic_.py  base.py  factory.py  fallback.py  gemini_.py  ollama_.py  openai_.py
src/nexus_worker/tools/: __init__.py  analyze.py  document.py  explain.py  generate.py  refactor.py  review.py  test.py
src/nexus_worker/utils/: __init__.py  files.py
tests/: conftest.py
tests/test_core/: test_cache.py  test_errors.py  test_logger.py  test_metrics.py
tests/test_prompts/: test_engine.py
tests/test_providers/: test_anthropic.py  test_factory.py  test_fallback.py  test_gemini.py  test_ollama.py  test_openai.py
tests/test_tools/: test_analyze.py  test_document.py  test_explain.py  test_generate.py  test_refactor.py  test_review.py  test_test.py
tests/test_utils/: test_files.py
