[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-worker-mcp"
version = "0.1.0"
description = "Serveur MCP agnostique qui optimise les coûts LLM en déléguant les tâches lourdes à un modèle Worker économique."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Obelotech" },
]
keywords = ["mcp", "llm", "ai", "orchestration", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nexus_worker"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
